<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_my_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/home_background"
    tools:context="com.daili.tsapp.tsActivity.MyFormActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/qiangdan_toptabtex_notselect"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/titiletextcolor"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:text="@string/myform_title"
            />
        <ImageView
            android:id="@+id/myform_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:src="@mipmap/fanhui"
            />

    </RelativeLayout>


        <LinearLayout
            android:id="@+id/myform_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/myform_tab1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/myform_allform"
                android:textSize="14sp"
                android:textColor="@color/settingtext" />


            <TextView
                android:id="@+id/myform_tab2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/myform_daijiedan"
                android:textColor="@color/settingtext" />


            <TextView
                android:id="@+id/myform_tab3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/myform_daishenhe"
                android:textColor="@color/settingtext" />


            <TextView
                android:id="@+id/myform_tab4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/myform_daiqueren"
                android:textColor="@color/settingtext" />

            <TextView
                android:id="@+id/myform_tab5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/myform_daipingjia"
                android:textColor="@color/settingtext" />

        </LinearLayout>
    <View
        android:id="@+id/myform_tab_line"
        android:layout_width="74dp"
        android:layout_height="4dp"
        android:background="@mipmap/myform_moveline" />
    <android.support.v4.view.ViewPager
        android:id="@+id/myform_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        ></android.support.v4.view.ViewPager>

</LinearLayout>
