<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data class="FillMesBinding">

    </data>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_fill_card_msg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgray"
    tools:context="com.ts.partner.partnerActivity.FillCardMsgActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/zhucecolortitle"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <ImageView
            android:id="@+id/fillcardMsg_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/addcard_fanhui"
            android:layout_marginStart="15dp"

            />
        <TextView
            android:id="@+id/fillcardMsg_bac"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/fillcardMsg_back"
            android:textColor="@color/yello_701585"
            android:layout_marginStart="7dp"
            android:textSize="14sp"
            android:text="@string/fill_car_msg"
            />

            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@color/write"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:textColor="@color/gray1"
            android:textSize="14sp"
            android:text="@string/kaleixing"
            />
        <TextView
            android:id="@+id/fillcarmsg_cardtype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:textSize="14sp"
            android:background="@null"
            android:textColor="@color/gray3"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@color/write"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:textColor="@color/gray1"
            android:textSize="14sp"
            android:text="@string/phonenum"
            />
        <EditText
            android:id="@+id/fillcarmsg_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="80dp"
            android:textSize="14sp"
            android:background="@null"
            android:textColor="@color/gray3"
            android:layout_centerVertical="true"
            android:inputType="phone"
            android:maxLines="1"
            android:hint="@string/yinhangyuliuhaoma"
            />
    </RelativeLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    >
    <TextView
        android:id="@+id/fillcarmsg_agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/gray3"
        android:text="@string/agree"
        android:layout_marginStart="25dp"
        />
    <TextView
        android:id="@+id/fillmsg_agrees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fuwuxieyi"
        android:textColor="@color/done_yellow"
        android:textSize="14sp"
        android:layout_toRightOf="@id/fillcarmsg_agree"
        />
</RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:layout_marginTop="30dp"
        >
        <Button
            android:id="@+id/fillmsg_nextstep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:enabled="false"
            android:background="@mipmap/addcard_next_moren"
            />
    </RelativeLayout>
</LinearLayout>
</layout>