<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data></data>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgray"
    tools:context="com.daili.tsapp.tsActivity.FankuiActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/qiangdan_toptabtex_notselect"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <RelativeLayout
            android:id="@+id/fankui_back"
            android:layout_width="70dp"
            android:layout_height="match_parent"></RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/titiletextcolor"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:text="@string/wentifankui"
            />
        <ImageView
             android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:src="@mipmap/fanhui"
            />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        >
        <EditText
            android:id="@+id/fankui_wenti"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="top"
            android:hint="您的宝贵意见，就是我们进步源泉"
            android:textSize="14sp"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/qiangdan_toptabtex_notselect"
        android:text="@string/lianxifangshi"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        >
        <EditText
            android:id="@+id/fankui_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:maxLines="1"
            android:textSize="14sp"
            android:hint="@string/qq_phone"
            />
    </RelativeLayout>
   <Button
       android:id="@+id/fankui_tijiao"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginStart="15dp"
       android:layout_marginEnd="15dp"
       android:layout_marginTop="30dp"
       android:background="@drawable/selector_tixianbutton"
       android:text="@string/wentitijao"
       android:textColor="@color/white"
       />

</LinearLayout>
</layout>