<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/qiangdanback"
    tools:context="com.daili.tsapp.tsFragment.UtilFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/qiangdan_toptabtex_notselect"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/titiletextcolor"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:text="@string/fight_fortip"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="7dp"
        >
        <RadioGroup
            android:id="@+id/toptab_radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

          android:layout_centerHorizontal="true"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/toptab_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/qiangdan_toptab_left"
                android:button="@null"
                android:textAlignment="center"
                android:text="@string/qiangdan_toptab_new"
                android:textSize="16sp"
                android:textColor="@color/qingdan_toptabtex_seleter"
                android:checked="true"
                />
            <RadioButton
                android:id="@+id/toptab_have"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/qiangdan_toptab_right"
                android:button="@null"
                android:text="@string/qiangdan_toptabtex"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="@color/qiangdan_toptabtex_notselect"
                />
        </RadioGroup>
    </RelativeLayout>
    <FrameLayout
        android:id="@+id/qiangdan_framecontent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>


</LinearLayout>
